Issue #331: Move intro text
Moved intro text django-block-content from browse_below_tab_content
to browse_above_tabs.

This brought to my attention a lot of very awkward whitespace above
this text. There was padding and margins on numerous classes stacked
in that region, resulting in a huge awkward gap (title didn't appear until
halfway down the page!).

I modified the scss to override the "content" class and remove the
biggest chunk of that (40px top padding), resulting in a much less
awkward presentation across the board.

--- a/hub/static/scss/base.scss
+++ b/hub/static/scss/base.scss
@@ -406,3 +406,8 @@ i.icon-warning {
     display: inline-block;
     margin-right: 5px;
 }
+
+// Remove padding from top of content
+.content {
+    padding-top: 0;
+}
